X/Y/2014 ola-0.9.1
 Features:
 * Pretty print IPV4 addresses within the Python RDM code.

 API:

 RDM Tests:
 * Added the inter-test delay option to the Web UI too.

 Bugs:
 * Fix the recent code changes to work with FreeBSD, NetBSD and OpenBSD

 Internal:


1/3/2014 ola-0.9.0
 Features:
 * Added priority support for input ports - #259
 * Added DNS-SD registration support with both Bonjour and Avahi so that the
   OLA web UI appears as _http._tcp - #270
 * Added plugin for Renard serial protocol (Renard SS24, SS8, etc) - #277
 * Refactor sensor functionality in the software RDM responders and add a load
   average sensor to them and the SPI responder.
 * Add a class to represent MAC addresses and support for MAC address RDM types
 * Added pretty printing of sensor definition messages.
 * Added a --duration option to the show recorder - #255.
 * Add a warning if the firmware in an Enttec USB Pro widget doesn't support
   RDM - #275.
 * Print a warning if no Logic device is found when using the RDM sniffer.
 * Added support for the P9813 family of SPI pixels.
 * Show dashes in the CLI DMX monitor if a universe has fewer than 512
   channels.
 * Added initial support for the MilInst 1-553 interface.
 * Added a version option to all flags based commands; removed the -v verify
   short option from ola_recorder that clashed.
 * Added a dummy responder which implements the draft E1.37-2 PIDs.
 * Standardised all the following long arguments from _ to - in programs and
   completion: --skip_queued_messages --www_dir --log_directory
   --world_writeable
 * Standardised on --pid-location in Python programs and
   completion.

 API:
 * Added the ability to specify the priority of the DMX data in the C++ API -
   #266
 * Clean up of the C++ client API. deprecated ola::OlaCallbackClient.
 * Added a Version API.
 * Renamed DMXRecieved(sic) to DMXReceived in ola::Client
 * Renamed valiator(sic) to validator, incomming(sic) to incoming, mimimun(sic)